Fix styling on mobile

--- a/style.css
+++ b/style.css
@@ -520,3 +520,13 @@ button[disabled] {
 		max-width: 100%;
 	}
 }
+
+@media (max-width: 700px) {
+	.rsvp-food-fieldsets {
+		flex-direction: column;
+	}
+
+	.rsvp-food-fieldsets fieldset {
+		width: 100%;
+	}
+}
